@@ -31,6 +31,17 @@
 
         Reviewed by Darin Adler
 
+        Use an OwnPtr for m_chromeClient.
+        
+        * svg/graphics/SVGImage.cpp:
+        (WebCore::SVGImage::~SVGImage):
+        (WebCore::SVGImage::dataChanged):
+        * svg/graphics/SVGImage.h:
+
+2009-01-02  Simon Fraser  <simon.fraser@apple.com>
+
+        Reviewed by Darin Adler
+
         https://bugs.webkit.org/show_bug.cgi?id=22981
 
         Repaints inside of an SVGImage were thrown on the floor,
